Added test, reimagined the api (for the 1000th time), implemented some more data base functionality